@@ -4,6 +4,9 @@ Products.CMFCore Changelog
 2.3.0-alpha (unreleased)
 ------------------------
 
+- utils: Added FakeExecutableObject.
+  It can be used to set proxy roles in trusted code.
+
 - tests base: Removed obsolete test utils.
 
 - testing: Removed broken run function.
